2004-08-24  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-unix-mounts.c (_gnome_vfs_get_current_unix_mounts):
	Workaround for --bind mounts. Patch from Davyd Madeley <davyd@madeley.id.au>
	Fixes bug #139854

2004-08-19  Christophe Fergeau  <teuf@gnome.org>

	* configure.in:
	* libgnomevfs/gnome-vfs-hal-mounts.c:
	* libgnomevfs/gnome-vfs-hal-mounts.h:
	* modules/Makefile.am: fix compilation with --enable-hal with dbus
	  0.22, fixed link flags for the cdda method

2004-08-18  Anders Carlsson  <andersca@gnome.org>

	* libgnomevfs/eggdesktopentries.c:
	(egg_desktop_entries_parse_entry), (key_get_locale),
	(egg_desktop_entries_get_locale_string):
	Fix bug where locale strings would not be read correctly.

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_application_new_from_id):
	Translate the application name.
	
2004-08-17  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info-cache.c (gnome_vfs_mime_info_cache_init):
	Emit mime data changed from idle.

2004-08-16  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.7.91 ===

2004-08-16  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update
	
	* configure.in:
	Bump version to 2.7.91

2004-08-16  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Add some missing goject-2.0 references to PKG_CHECK macros.

2004-08-16  Christophe Fergeau  <teuf@gnome.org>

	* doc/Makefile.am:
	* doc/gnome-vfs-2.0-docs.sgml:
	* doc/gnome-vfs-2.0-sections.txt:
	* doc/gnome-vfs-2.0.types:
	* doc/tmpl/gnome-vfs-dns-sd.sgml:
	* doc/tmpl/gnome-vfs-drive.sgml:
	* doc/tmpl/gnome-vfs-inet-connection.sgml:
	* doc/tmpl/gnome-vfs-mime-database.sgml:
	* doc/tmpl/gnome-vfs-resolve.sgml:
	* doc/tmpl/gnome-vfs-result.sgml:
	* doc/tmpl/gnome-vfs-socket-buffer.sgml:
	* doc/tmpl/gnome-vfs-socket.sgml:
	* doc/tmpl/gnome-vfs-ssl.sgml:
	* doc/tmpl/gnome-vfs-utils.sgml:
	* doc/tmpl/gnome-vfs-volume-monitor.sgml:
	* doc/tmpl/gnome-vfs-volume.sgml: