@@ -1,3 +1,15 @@
+2004-08-25  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Look for sys/poll.h and poll.
+
+	* libgnomevfs/gnome-vfs-unix-mounts.c:
+	Use poll instead of select if availible.
+	Don't leak pipes on fork failure.
+	Don't close pipes[0] twice in child.
+	Close pipes[1] before waitpid
+	Re-do poll/select on EINTR.
+
 2004-08-24  Alexander Larsson  <alexl@redhat.com>
 
 	* libgnomevfs/gnome-vfs-unix-mounts.c (_gnome_vfs_get_current_unix_mounts):
